--- a/Session4/github-actions/.github/workflows/hello-world.yml
+++ b/Session4/github-actions/.github/workflows/hello-world.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Say Hello
-        run: echo "Hello MACY GANDAaaa!"
+        run: echo "Hello MACY GANDAaaa ChanGe 2!"
 
       - name: Print Environment
         run: |
